security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Provisions the security groups required by the other stacks.

Parameters:
  NamingPrefix:
    Type: String
  VPC:
    Type: 'AWS::EC2::VPC::Id'
    Description: Deploy security groups in this VPC
    
Resources:
  ECSTaskSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: ECS task security group
      GroupName: !Sub '${NamingPrefix}-ecs-task-sg'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: '-1'
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-ecs-task-sg'
    
  BastionSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Bastion host security group
      GroupName: !Sub '${NamingPrefix}-bastion-sg'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-bastion-sg'
    
  LoadBalancerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Load balancer security group
      GroupName: !Sub '${NamingPrefix}-load-balancer-sg'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-load-balancer-sg'
    
Outputs:
  ECSTaskSecurityGroup:
    Description: A reference to the ECS task security group ID
    Value: !Ref ECSTaskSecurityGroup
    Export:
      Name: !Sub '${NamingPrefix}-ecs-task-sg'
      
  BastionSecurityGroup:
    Description: A reference to the bastion security group ID
    Value: !Ref BastionSecurityGroup
    
  LoadBalancerSecurityGroup:
    Description: A reference to the load balancer security group ID
    Value: !Ref LoadBalancerSecurityGroup
