vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: 'Provisions a VPC with 2 public subnets, 2 private subnets, and 2 NAT gateways.'
Parameters:
  NamingPrefix:
    Type: String
  VPCCIDR:
    Type: String
    Default: 10.0.0.0/16
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
  PrivateSubnet1CIDR:
    Type: String
    Default: 10.0.0.0/24
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
  PrivateSubnet2CIDR:
    Type: String
    Default: 10.0.1.0/24
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
  PublicSubnet1CIDR:
    Type: String
    Default: 10.0.3.0/24
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
  PublicSubnet2CIDR:
    Type: String
    Default: 10.0.4.0/24
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-vpc'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 08877b6d-cac7-4d37-bb4d-8184b3550b59
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone:
        'Fn::Select':
          - 0
          - 'Fn::GetAZs': !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-private-subnet-1'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b14058c5-1df8-475e-b2e5-46d77cbd17ba
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZone:
        'Fn::Select':
          - 1
          - 'Fn::GetAZs': !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-private-subnet-2'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 8e264502-5db3-4820-8ce2-a4c9f6d80c4d
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone:
        'Fn::Select':
          - 0
          - 'Fn::GetAZs': !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-public-subnet-1'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9f88f06e-4784-4bf1-9b5e-30c23580664f
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone:
        'Fn::Select':
          - 1
          - 'Fn::GetAZs': !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-public-subnet-2'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ef18f1c6-7592-4f9c-a4bf-a72291858608
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-igw'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3396ce8b-34d6-4c6f-99ac-9746ad6134d1
  GatewayAttachement:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e77ee451-b137-4bcc-a959-ffd0f29648f1
  NatGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ba68bab2-ee04-4112-a3fa-b0208d43a963
  NatGatewayEIP:
    Type: 'AWS::EC2::EIP'
    DependsOn:
      - GatewayAttachement
    Properties:
      Domain: vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b1e50d3f-a69b-4853-96ea-90578b5c23d6
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-public-rtb'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6c7f4ce0-cccb-4ade-b7ff-798431d8caa2
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${NamingPrefix}-private-rtb'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7b62cbb1-75d2-4aff-89f1-314bc9e76df5
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: GatewayAttachement
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7f3bbef0-cdf6-4414-8e15-d5a647ec1ef9
  PublicRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  PublicRouteTableAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2
  PrivateRouteToInternet:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 331c1358-10b5-440c-8990-68a869609ae9
  PrivateRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1
  PrivateRouteTableAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2
Outputs:
  VPC:
    Description: A reference to the VPC
    Value: !Ref VPC
  PrivateSubnet1:
    Description: A reference to the private subnet in Availability zone a
    Value: !Ref PrivateSubnet1
  PrivateSubnet2:
    Description: A reference to the private subnet in Availability zone  b
    Value: !Ref PrivateSubnet2
  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join 
      - ','
      - - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
    Export:
      Name: !Sub '${NamingPrefix}-private-subnets'
  PublicSubnet1:
    Description: A reference to the public subnet in AZ a
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Description: A reference to the public subnet in AZ b
    Value: !Ref PublicSubnet2
